--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -45,14 +45,17 @@
 
  :root {
   --vp-c-default-1: var(--vp-c-gray-1);
+  /* #dddde3 */
   --vp-c-default-2: var(--vp-c-gray-2);
+  /* #e4e4e9 */
   --vp-c-default-3: var(--vp-c-gray-3);
+  /* #ebebef */
   --vp-c-default-soft: var(--vp-c-gray-soft);
 
-  --vp-c-brand-1: var(--vp-c-indigo-1);
-  --vp-c-brand-2: var(--vp-c-indigo-2);
-  --vp-c-brand-3: var(--vp-c-indigo-3);
-  --vp-c-brand-soft: var(--vp-c-indigo-soft);
+  --vp-c-brand-1: #B23451;
+  --vp-c-brand-2: #C75A6F;
+  --vp-c-brand-3: #8F1D3B;
+  --vp-c-brand-soft: rgba(178, 52, 81, 0.1);
 
   --vp-c-tip-1: var(--vp-c-brand-1);
   --vp-c-tip-2: var(--vp-c-brand-2);
@@ -60,8 +63,11 @@
   --vp-c-tip-soft: var(--vp-c-brand-soft);
 
   --vp-c-warning-1: var(--vp-c-yellow-1);
+  /* #915930 */
   --vp-c-warning-2: var(--vp-c-yellow-2);
+  /* #946300 */
   --vp-c-warning-3: var(--vp-c-yellow-3);
+  /* #9f6a00 */
   --vp-c-warning-soft: var(--vp-c-yellow-soft);
 
   --vp-c-danger-1: var(--vp-c-red-1);
@@ -92,18 +98,13 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 30%,
-    #41d1ff
-  );
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      #ffabb5 10%,
+      #B23451 90%);
 
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 50%,
-    #47caff 50%
-  );
-  --vp-home-hero-image-filter: blur(44px);
+  --vp-home-hero-image-background-image: linear-gradient(-45deg,
+      #B23451 70%,
+      #ffabb5 30%);
 }
 
 @media (min-width: 640px) {
@@ -137,3 +138,142 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+
+/** ==========================================================================
+ * CUSTOM STYLES
+ * ========================================================================== */
+
+/*
+ * Colors
+ * ========================================================================== */
+
+:root {
+  --vp-c-good-1: #309159;
+  --vp-c-good-2: #009463;
+  --vp-c-good-3: #009f6a;
+  --vp-c-good-soft: rgba(48, 145, 89, 0.1);
+}
+
+
+
+
+/* 
+ * Card
+ * ========================================================================== */
+
+.cards-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 20px -10px;
+}
+
+.card {
+  flex: 1 1 300px;
+  padding: 20px;
+  margin: 10px;
+  background-color: var(--vp-c-bg-alt);
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.card h3 {
+  color: var(--vp-c-text-1);
+  margin: 0;
+}
+
+.card p {
+  color: var(--vp-c-text-1);
+}
+
+.chart-card--image {
+  width: 90%;
+  margin: auto;
+  padding: 0px 17.6px;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.chart-card--image-rounded {
+  border-radius: 12.4px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+/* 
+ * Iconify
+ * ========================================================================== */
+
+.text-with-icon {
+  display: flex;
+  align-items: center;
+}
+
+.iconify {
+  margin-right: 0.5em;
+}
+
+
+/* 
+ * Option Bar
+ * ========================================================================== */
+
+.option-bar {
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+}
+
+.option {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 8px 15px;
+  border-radius: 50px;
+  font-size: 0.9em;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.option.ok {
+  background-color: var(--vp-c-good-soft);
+  color: var(--vp-c-good-3);
+}
+
+.option.warn {
+  background-color: var(--vp-c-warning-soft);
+  color: var(--vp-c-warning-3);
+}
+
+.hover-text {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
+  padding: 8px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  z-index: 10;
+  max-width: 90vw;
+  overflow-wrap: break-word;
+}
+
+.option:hover .hover-text {
+  display: block;
+}
+
+@media (max-width: 600px) {
+  .hover-text {
+    left: 0;
+    right: 0;
+    transform: none;
+    text-align: center;
+  }
+}
